[style] - Fix footer alignment and add line at bottom of page

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,9 +1,11 @@
 .footer {
     display: flex;
-    min-height: 25vh;
+    min-height: 20vh;
+    border-bottom: 1em solid var(--grey);
 }
 .footerContent {
     margin: auto;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
